fix: allow all origins in API Gateway CORS config to fix Vercel CORS error